# pdsns

./: AUTHORS  Makefile.am  README.md  autogen.sh  cleanup.sh  configure.ac
src/: Makefile.am  libpdsns.c  libpdsns.h  test.c
